--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "axios": "^1.2.0",
+    "vant": "^4.0.7",
+    "vue-router": "^4.1.6",
+    "weixin-js-sdk": "1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +22,17 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "@types/node": "^18.11.7",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "postcss-px-to-viewport-8-plugin": "^1.1.5",
+    "typescript": "^4.6.4",
+    "unplugin-vue-components": "^0.22.9",
+    "vite": "^3.2.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vue-tsc": "^1.0.9"
   },
   "eslintConfig": {
     "root": true,
