--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
   "name": "stock-trade",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "axios": "^1.2.0",
-    "vant": "^4.0.7",
-    "vue-router": "^4.1.6",
-    "weixin-js-sdk": "1.2.0"
+    "path": "^0.12.7",
+    "vant": "^4.9.8",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
+    "weixin-js-sdk": "^1.6.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "@types/node": "^18.11.7",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "postcss-px-to-viewport-8-plugin": "^1.1.5",
-    "typescript": "^4.6.4",
-    "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.0",
+    "@types/node": "^22.8.1",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "axios": "^1.7.7",
+    "eslint-plugin-vue": "^9.29.1",
+    "postcss-px-to-viewport-8-plugin": "^1.2.5",
+    "typescript": "~5.6.2",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.9",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-imagemin": "^0.6.1",
-    "vue-tsc": "^1.0.9"
+    "vite-plugin-html": "^3.2.2",
+    "vue-tsc": "^2.1.6"
   },
   "eslintConfig": {
     "root": true,
