--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "axios": "^1.7.7",
     "eslint-plugin-vue": "^9.29.1",
+    "https": "^1.0.0",
+    "moment": "^2.30.1",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "typescript": "~5.6.2",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.9",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.2",
+    "vite-plugin-require-transform": "^1.0.21",
     "vue-tsc": "^2.1.6"
   },
   "eslintConfig": {
