--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,8 +20,8 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    // "noImplicitAny":false,
-    // "allowJs":true,
+    "noImplicitAny":false,
+     "allowJs":true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
