--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_APP_ENV_NODE = 'pro'
 VITE_APP_APPID = 'ww1c5ca8f9af6164f4'
 VITE_APP_AGENTID = '1000002'
-VITE_APP_PORTAL_HOST = 'http://tchuang.wicp.vip'
+VITE_APP_PORTAL_HOST = 'http://alextian.tpddns.cn:8088'
